# xch-project

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  README.md
lib_xch/: Cargo.toml  README.md
lib_xch/benches/: benchmark.rs
lib_xch/src/: ast.pest  lib.rs  parser.rs  public.rs
lib_xch/src/api/: handler.rs  structs.rs  traits.rs
lib_xch/src/balancer/: handler.rs  maths.rs
lib_xch/src/balancer/maths/: g_elim.rs  gauss_eliminate.rs
lib_xch/src/parser/: ast.rs  atomdict.rs  datastructure.rs  handler.rs
lib_xch/src/parser/ast/: node.rs  tree.rs  treebuilder.rs
lib_xch/src/public/: calc.rs  cell.rs  failures.rs  handler.rs  mod.rs  structs.rs  traits.rs  types.rs
lib_xch/src/public/cell/: base.rs  fromstr.rs  integer.rs  mod.rs  num.rs  signed.rs
lib_xch/tests/: integrated_test.rs  integration_test.rs
lib_xch/tests/testers/: mod.rs
scalc/: Cargo.toml  README.md
scalc/examples/: main.rs
scalc/src/: impls.rs  lib.rs  macros.rs
src/: ast.pest  balancer_mod.rs  handler.rs  lib.rs  public.rs  structs.rs  tests.rs
src/api/: handler.rs  mod.rs  traits.rs
src/balancer/: handler.rs  mod.rs
src/balancer_mod/: frac_util.rs  gauss_eliminate.rs  guass_eliminate.rs  math_methods.rs  mod.rs  public_methods.rs
src/math_methods/: basic_fns.rs  frac_util.rs  gauss_eliminate.rs  mod.rs
src/parser/: atomdict.rs  datastructure.rs  handler.rs
src/parser/ast/: node.rs  tree.rs
src/parser_mod/: legal_check_util.rs  mod.rs  parser_struct.rs
tests/: integration_test.rs
tests/testers/: mod.rs
xch-ceb/: Cargo.toml
xch-ceb/src/: main.rs
