[package]
name = "lib_xch"
version = "0.8.0"
authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
description = "Crate xch-ceb's official lib"
license = "GPL-3.0"
repository = "https://github.com/LEXUGE/lib-xch-ceb"
readme = "README.md"

[dependencies]
lazy_static = "^1.0"
regex = "^1.0"
num = "^0.2"
nalgebra = "^0.16"
