[package]
name = "lib_xch"
version = "0.9.1"
authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
description = "Crate xch-ceb's official lib"
license = "GPL-3.0"
repository = "https://github.com/XCH-CEB/lib-xch-ceb"
readme = "README.md"

[badges]
travis-ci = { repository = "XCH-CEB/lib-xch-ceb" }

[dependencies]
num = "^0.2"
nalgebra = "^0.16"
id_tree = "^1.3"
pest = "^1.0"
pest_derive = "^1.0"
