[package]
name = "lib_xch"
version = "0.12.1"
authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
description = "Crate xch-ceb's official lib"
license = "GPL-3.0"
repository = "https://github.com/XCH-CEB/xch-project"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "XCH-CEB/xch-project" }

[dependencies]
failure = "^0.1"
num = "^0.2"
nalgebra = "^0.16"
id_tree = "^1.3"
pest = "^2.0"
pest_derive = "^2.0"
