[package]
name = "lib_xch"
version = "0.13.1"
authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
description = "Crate xch-ceb's official lib"
license = "GPL-3.0"
repository = "https://github.com/XCH-CEB/xch-project"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "XCH-CEB/xch-project" }

[dependencies]
failure = "^0.1"
num = "^0.3"
nalgebra = "^0.28"
id_tree = "^1.5"
pest = "^2.1"
pest_derive = "^2.1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark"
harness = false