[package]
name = "xch-ceb"
version = "0.5.2"
authors = ["LEXUGE <LEXUGEyky@outlook.com>"]
license = "GPL-3.0"
description = "XCH - Chemical Equation Balancer"
repository = "https://github.com/XCH-CEB/xch-project"
edition = "2018"

[badges]
travis-ci = { repository = "XCH-CEB/xch-project" }

[dependencies]
lib_xch = { version="^0.13", path = "../lib_xch" }
